Add google calendars

--- a/virtual.html
+++ b/virtual.html
@@ -111,7 +111,12 @@ November 10: Submission forms close for tea party, pub trivia, and fashion walk 
 November 13: Brand launches and sales begin<br>
 November 13 - 15: Panels and activities<br>
 November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
-
+<p>
+  <a href="https://calendar.google.com/calendar/embed?src=keds62fasva4km3bpv9uvbvvac%40group.calendar.google.com&ctz=America%2FLos_Angeles
+">See the full schedule on our Google calendar</a> or <a href="./virtual/schedule.html">on our schedule page</a>.</p>
+<p>
+<iframe class="mobilehide" src="https://calendar.google.com/calendar/embed?height=300&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=a2VkczYyZmFzdmE0a20zYnB2OXV2YnZ2YWNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23C0CA33&amp;mode=AGENDA&amp;showNav=1&amp;title=Royal%20Vegas%20Online&amp;showTabs=1" style="border:solid 1px #777" width="400" height="300" frameborder="0" scrolling="no"></iframe>
+</p>
 <hr id="forms">
 <h4 class="section-header">Forms</h4>
 <p>All submission forms open October 10 at 12 PM PT. All forms except those for the charity drawing close November 10 at 12 PM PT. Charity drawing entries close November 15 at 2:00 PM PT.</p>
