--- a/virtual/schedule.html
+++ b/virtual/schedule.html
@@ -94,6 +94,9 @@
 <div class="row content">
 <h4 class="section-header">Royal Vegas Online Weekend Schedule</h4>
 <p>All panels hosted at <a href="https://twitch.tv/jfashionondemand">https://twitch.tv/jfashionondemand</a> unless otherwise specified</p>
+<p><a href="https://calendar.google.com/calendar/embed?src=keds62fasva4km3bpv9uvbvvac%40group.calendar.google.com&ctz=America%2FLos_Angeles
+">See the full schedule on our Google calendar</a> </p>
+<p><iframe class="mobilehide" src="https://calendar.google.com/calendar/embed?height=300&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=a2VkczYyZmFzdmE0a20zYnB2OXV2YnZ2YWNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23C0CA33&amp;mode=AGENDA&amp;showNav=1&amp;title=Royal%20Vegas%20Online&amp;showTabs=1" style="border:solid 1px #777" width="400" height="300" frameborder="0" scrolling="no"></iframe></p>
 <h5 class="section-header">Friday, November 13</h5>
 <h6 class="section-header">6:00 PM ET / 3:00 PM PT: Opening Ceremony + Lolita Fashion Pub Trivia</h6>
 <p>MC: <a href="https://www.ghostgirlgoods.com/">Alexia</a> </p>
