--- a/virtual/schedule.html
+++ b/virtual/schedule.html
@@ -109,7 +109,7 @@
 <p>Get hype and dance along with a live DJ set guaranteed to make your evening happy.</p>
 <h5 class="section-header">Saturday, November 14</h5>
 <h6 class="section-header">11:00 AM ET / 8:00 AM PT: Building A Local Kawaii Community</h6>
-<p>Hosted by <a href="http://www.ipukekawaii.com/">Imani</a> on <a href="https://www.twitch.tv/ipukekawaii">https://twitch.tv/ipukekawaii</a></p>
+<p>Hosted by <a href="http://www.ipukekawaii.com/">Imani</a></p>
 <p>Want to gather more kawaii friends & make space in your city? Here’s where you can learn how to gather, fair ways to lead & where local comms fit in the worldwide kawaii tribe.</p>
 <h6 class="section-header">12:15 PM ET / 9:15 AM PT: Discovering Your Kawaii with GHOST GIRL GOODS</h6>
 <p>Hosted by <a href="https://www.ghostgirlgoods.com/">Alexia</a> on <a href="https://www.twitch.tv/ghostgirlgoods">https://twitch.tv/ghostgirlgoods</a></p>
