Update charity info

--- a/virtual.html
+++ b/virtual.html
@@ -119,7 +119,7 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 </p>
 <hr id="forms">
 <h4 class="section-header">Forms</h4>
-<p>Charity drawing entries close November 15 at 2:00 PM PT.</p>
+<p>Charity drawing entries close November 15 at 2:00 PM PT. Learn more <a href="./virtual/charity.html">here.</a></p>
 <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSelQtr80LO8NJGtB74qF2Z60bEgl-2pYJLr6rTq7D7qGTLVVQ/viewform?usp=sf_link">Charity drawing entry form</a></p>
 <hr id="playlist">
 <h4 class="section-header">Event Playlist</h4>
