--- a/virtual/charity.html
+++ b/virtual/charity.html
@@ -93,6 +93,7 @@
   <center>
 <div class="row content">
   <h4 class="section-header">Charity Drawing</h4>
+  <p>Please note that all tea party attendees are automatically entered in the charity drawing. Please do not fill out the drawing form if you are attending the tea party.</p>
 <p>We will hold a charity drawing to benefit the <a href="https://eji.org/">Equal Justice Initiative</a>. We will announce the winners at the Royal Vegas Online closing ceremonies. You must submit your entries by November 15 at 2:00 PM PT.</p>
 <p>No monetary purchase is necessary to enter or win the drawing. Any attempted donations directly to PPC will not result in a contest entry and will be promptly refunded. Please note that the drawing is only open to United States residents. It is not open to residents of Alabama, Hawaii, Kansas, New Jersey, and Utah, in compliance with applicable state laws.</p>
 <p>You can enter our drawing by 1. Registering for the Tea Party or Tea Party waitlist, 2. Submitting proof of donation of $5 or more to the <a href="https://eji.org/">Equal Justice Initiative</a>, or 3. reposting our informational Instagram post (<a href="#nopurchase">see this section for more information</a>). Limit one entry per person.</p>
