--- a/virtual/schedule.html
+++ b/virtual/schedule.html
@@ -112,7 +112,7 @@
 <p>Hosted by <a href="http://www.ipukekawaii.com/">Imani</a></p>
 <p>Want to gather more kawaii friends & make space in your city? Here’s where you can learn how to gather, fair ways to lead & where local comms fit in the worldwide kawaii tribe.</p>
 <h6 class="section-header">12:15 PM ET / 9:15 AM PT: Discovering Your Kawaii with GHOST GIRL GOODS</h6>
-<p>Hosted by <a href="https://www.ghostgirlgoods.com/">Alexia</a> on <a href="https://www.twitch.tv/ghostgirlgoods">https://twitch.tv/ghostgirlgoods</a></p>
+<p>Hosted by <a href="https://www.ghostgirlgoods.com/">Alexia</a></p>
 <p>A timeline of GHOST GiRL GOODS, a peek into her work with Japanese brands/designers, and her message to help others find their kawaii. GHOST GiRL presents a fun panel filled with cool stories and photos from her fashion brand adventure!</p>
 <h6 class="section-header">1:30 PM ET / 10:30 AM PT: Lolita 202: Advancing Your Accessories</h6>
 <p>Hosted by <a href="http://instagram.com/mintypile">Mindy</a></p>
