Reword panel description

--- a/virtual/schedule.html
+++ b/virtual/schedule.html
@@ -110,7 +110,7 @@
 <h5 class="section-header">Saturday, November 14</h5>
 <h6 class="section-header">11:00 AM ET / 8:00 AM PT: Building A Local Kawaii Community</h6>
 <p>Hosted by <a href="http://www.ipukekawaii.com/">Imani</a></p>
-<p>Want to gather more kawaii friends & make space in your city? Here’s where you can learn how to gather, fair ways to lead & where local comms fit in the worldwide kawaii tribe.</p>
+<p>Want to gather more kawaii friends & make space in your city? Here’s where you can learn how to gather, fair ways to lead & where local comms fit in the worldwide kawaii culture.</p>
 <h6 class="section-header">12:15 PM ET / 9:15 AM PT: Discovering Your Kawaii with GHOST GIRL GOODS</h6>
 <p>Hosted by <a href="https://www.ghostgirlgoods.com/">Alexia</a></p>
 <p>A timeline of GHOST GiRL GOODS, a peek into her work with Japanese brands/designers, and her message to help others find their kawaii. GHOST GiRL presents a fun panel filled with cool stories and photos from her fashion brand adventure!</p>
