add sugar clay cafe

--- a/virtual.html
+++ b/virtual.html
@@ -214,10 +214,11 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 </div>
 <div class="col-md-4 affiliate">
 <a href="https://www.etsy.com/shop/Lavendorium">Lavendorium</a><br>
-<a href="https://prettysour.com/">Pretty Sour</a>
+<a href="https://prettysour.com/">Pretty Sour</a><br>
+<a href="https://www.etsy.com/shop/starsweets">Star Sweets</a>
 </div>
 <div class="col-md-4 affiliate">
-  <a href="https://www.etsy.com/shop/starsweets">Star Sweets</a><br>
+  <a href="https://www.sugarmintcastle.com"/>Sugar Clay Cafe</a><br>
 <a href="https://www.sugarstarcafe.com/">Sugarstar Cafe</a><br>
 <a href="https://www.etsy.com/shop/SweetPastelPeach">Sweet Pastel Peach</a>
 </div>
