Move contact page under new about tree

--- a/about/contact.html
+++ b/about/contact.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html><html><head><title>Pretty Princess Club, LLC</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge">
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   <!-- add links to custom fonts -->
     <link href="https://fonts.googleapis.com/css?family=Gabriela" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/waves.css">
-    <link rel="stylesheet" href="./css/animate.css">
-    <link rel="stylesheet" href="./css/responsive-nav.css">
-    <link rel="stylesheet" href="./css/ppc-page.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/waves.css">
+    <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="../css/responsive-nav.css">
+    <link rel="stylesheet" href="../css/ppc-page.css">
 
   <header class="main_h sticky">
 
       <div class="row nav-row" id="sticky_nav">
-        <a class="logo-link" href="./vegas.html">
-<img src="./PrincessClockLogo-04.svg" class="logo logo-img" alt="Pretty Princess Club logo">
+        <a class="logo-link" href="../vegas.html">
+<img src="../PrincessClockLogo-04.svg" class="logo logo-img" alt="Pretty Princess Club logo">
 </a>
 
           <div class="mobile-toggle">
@@ -32,13 +32,13 @@
             </button>
             <div class="content_list left" id="thisList_2">
               <p class="sub-menu">
-               <a href="./virtual.html" >RVO Home</a></br>
-              <a href="./virtual/rvo-faq.html">Event FAQ</a></br>
-              <a href="./virtual/schedule.html">Programming and Schedule</a></br>
-              <a href="./virtual/tea.html">Virtual Tea Party</a></br>
-              <a href="./virtual/trivia.html">Virtual Pub Trivia</a></br>
-              <a href="./virtual/charity.html">Charity Drawing</a></br>
-              <a href="./virtual/contest.html">Fashion Walk and Coord Contest</a>
+               <a href="../virtual.html" >RVO Home</a></br>
+              <a href="../virtual/rvo-faq.html">Event FAQ</a></br>
+              <a href="../virtual/schedule.html">Programming and Schedule</a></br>
+              <a href="../virtual/tea.html">Virtual Tea Party</a></br>
+              <a href="../virtual/trivia.html">Virtual Pub Trivia</a></br>
+              <a href="../virtual/charity.html">Charity Drawing</a></br>
+              <a href="../virtual/contest.html">Fashion Walk and Coord Contest</a>
             </p>
             </div>
         </li>
@@ -51,20 +51,30 @@
 			</button>
 			<div class="content_list left" id="thisList_1">
 				<p class="sub-menu">
-         <a href="./vegas.html">RVR Home</a></br>
-        <a href="./event/event-faq.html">Event FAQ</a></br>
-        <a href="./event/programming.html">Programming and Schedule</a></br>
-        <a href="./event/reg.html">Registration</a></br>
-        <a href="./event/venue.html">Room Block and Venue</a></br>
-        <a href="./event/special-guests.html">Special Guests</a></br>
-        <a href="./event/tourists.html">Tourists</a></br>
-        <a href="./event/vendors.html">Vendors</a></br>
-        <a href="./event/volunteers.html">Volunteers</a>
+         <a href="../vegas.html">RVR Home</a></br>
+        <a href="../event/event-faq.html">Event FAQ</a></br>
+        <a href="../event/programming.html">Programming and Schedule</a></br>
+        <a href="../event/reg.html">Registration</a></br>
+        <a href="../event/venue.html">Room Block and Venue</a></br>
+        <a href="../event/special-guests.html">Special Guests</a></br>
+        <a href="../event/tourists.html">Tourists</a></br>
+        <a href="../event/vendors.html">Vendors</a></br>
+        <a href="../event/volunteers.html">Volunteers</a>
       </p>
 			</div>
 </li>
-      <li>   <a href="./about.html">About PPC</a></li>
-      <li>   <a href="./contact.html" class="active">Contact Us</a></li>
+      <li> 
+          <button class="btnList" onclick="openList('3')">
+            <span class="drop">About PPC</span>
+            <span class="acc">About PPC</span>
+          </button>
+          <div class="content_list left" id="thisList_3">
+           <p class="sub-menu">  
+            <a href="../about.html">Our Values and Staff</a>
+            <a href="../about/contact.html" class="active">Contact Us</a>
+           </p>
+          </div>
+      </li>
       <li>   <a href="https://prettyprincessclub.substack.com/" >Blog</a></li>
       <li>   <a href="https://shop.prettyprincess.club" >Shop</a></li>
     </ul>
@@ -91,18 +101,20 @@
 </div>
 
 <div class="row content">
+<p>For questions about Royal Vegas Retreat 2021, please see our <a href="../event/event-faq.htm">event FAQ page</a>.
 <h2>Via email</h2>
-<p>For questions about registration, send an email to <a href="mailto:registration@prettyprincess.club">registration@prettyprincess.club</a></p>
+<p>For questions about registration and tickets, send an email to <a href="mailto:registration@prettyprincess.club">registration@prettyprincess.club</a></p>
 <p>For all other questions, contact us directly at <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a></p>
 <h2>Via social media</h2>
+<p>We love when you like and comment on our social media posts! We cannot guarantee a response to any comments left on our social media pages. For anything that requires a response, please use our email contacts listed above.</p>
 <p>Find us on <a href="https://www.instagram.com/prettyprincess.club/">Instagram</a> at <a href="https://www.instagram.com/prettyprincess.club/">@prettyprincess.club</a>.</p>
 <p>Find us on <a href="https://www.facebook.com/ppcllcrvr/">Facebook</a> at <a href="https://www.facebook.com/ppcllcrvr/">/ppcllcrvr</a>.</p>
 <p>Find us on <a href="https://twitter.com/ppcllcrvr">Twitter</a> at <a href="https://twitter.com/ppcllcrvr">@ppcllcrvr</a>.</p>
 </div>
-<script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="./js/popper.min.js"></script>
-<script type="text/javascript" src="./js/bootstrap.min.js"></script>
-<script type="text/javascript" src="./js/mdb.min.js">
+<script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="../js/popper.min.js"></script>
+<script type="text/javascript" src="../js/bootstrap.min.js"></script>
+<script type="text/javascript" src="../js/mdb.min.js">
 </script>
 
 <div class="footer">
