Add about page tree nav to all pages

--- a/vegas.html
+++ b/vegas.html
@@ -62,8 +62,18 @@
             </p>
             </div>
         </li>
-            <li>   <a href="./about.html">About PPC</a></li>
-            <li>   <a href="./contact.html" >Contact Us</a></li>
+      <li> 
+          <button class="btnList" onclick="openList('3')">
+            <span class="drop">About PPC</span>
+            <span class="acc">About PPC</span>
+          </button>
+          <div class="content_list left" id="thisList_3">
+           <p class="sub-menu">  
+            <a href="./about.html">Our Values and Staff</a>
+            <a href="./about/contact.html">Contact Us</a>
+           </p>
+          </div>
+      </li>
             <li>   <a href="https://prettyprincessclub.substack.com/" >Blog</a></li>
             <li>   <a href="https://shop.prettyprincess.club" >Shop</a></li>
           </ul>
