Update wording on FAQ to match current guidance

--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -113,7 +113,7 @@
   <h4>Where do I buy my ticket?</h4>
   <p>Please see our <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite page</a> to purchase your ticket once sales open.
   <h4>When can I buy a ticket?</h4>
-  <p>As we are postponing our event to 2021, we will pause ticket sales until June 2021.</p>
+  <p>Given the current state of the global pandemic, we will pause ticket sales until we have more information about the safety of in-person events in 2021.</p>
   <h4>I have a discount code for a ticket. When can I use it?</h4>
   <p>You can use a discount code to buy your ticket anytime while ticket sales are open.</p>
   <h4>Will you sell single-day tickets?</h4>
