--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -66,7 +66,8 @@
             <span class="acc">About PPC</span>
           </button>
           <div class="content_list left" id="thisList_3">
-           <p class="sub-menu">  
+           <p class="sub-menu">
+            <a href="../about/coc.html">Code of Conduct</a>
             <a href="../about.html">Our Values and Staff</a>
             <a href="../about/contact.html">Contact Us</a>
            </p>
@@ -148,13 +149,7 @@
   <p>Are you interested in lending your skills to the success of Royal Vegas Retreat? <a href="./volunteers.html">Visit the Volunteers page</a> or <a href="../contact.html">contact us directly!</a></p>
   <p>We are always looking for sponsors who can donate small gifts for contest prizes and other perks for our guests. <a href="../contact.html">Contact us</a> anytime if you're interested in sponsoring our event.</p>
   <h3 class="section-header">Code of Conduct</h3>
-<p>Royal Vegas Retreat and all Pretty Princess Club events strive to create a safe, comfortable environment for fashion enthusiasts to share their love for Lolita Fashion and J-Fashion.</p>
-<p>All attendees must be 13 or older to purchase a ticket to Royal Vegas Retreat. Certain VIP events at Royal Vegas Retreat may be limited to attendees 21 and over. Attendees of any age may purchase a VIP ticket with the understanding that they will not be allowed into 21+ events if they are under 21.</p>
-<p>Pretty Princess Club will not tolerate harassment of any kind at any PPC event, including but not limited to: stalking, intimidation or bullying, offensive comments, physical harassment or unwelcome physical attention, non-consensual recording or photography, and the use of any hate-related image, symbol, or speech concerning an attendee's race or ethnicity, gender identity or expression, age, sexual orientation, disability, physical appearance, body size, or religion. Pretty Princess Club will take immediate action against any attendee who harasses another, including expulsion from the event with no refund and banning the harasser from future events. All people present at any PPC event are subject to this policy, including vendors, special guests, staff, and volunteers. We will center the needs of the person being harassed and work to provide space and comfort after removing the harasser from the situation. We will never directly escalate to law enforcement, as this compromises the safety of our guests.</p>
-<p>PPC understands that certain fashion accessories, such as collar-style necklaces and harnesses, become part of our fashion despite their relationship to kink. While collar-style necklaces and harnesses are permitted to be worn and sold, the following items may NOT be worn or sold at any PPC event: rope, impact toys such as crops, floggers, or whips, any sex toys, and any accessory with an obvious sexual purpose beyond fashion. Attendees will be asked to put these items away if shown, and refusal to do so will be interpreted as harassment.</p>
-<p>PPC proactively bans known harassers, predators, and bigots from our events. If you are a community moderator in the United States, we invite you to share any ban lists or information you may have to make our events safer. Please email us directly at info@prettyprincess.club. We will not share anything you tell us with outside parties, unless you give us permission to do so.</p>
-<p>PPC will record and photograph our events, and any attendee present may have their image used on our website or social media.</p>
-<p>PPC is committed to providing an accessible experience at large events by working with ADA-compliant venues, providing maps with accessible modes of transport across the venue, providing seating in queueing areas, providing meals in line with attendees' dietary restrictions, and providing extra seating at dances and concerts. If you require specific accommodations in order to attend an event, please reach out to us directly at info@prettyprincess.club</p>
+<p>Please see our <a href="../about/coc.html">Code of Conduct page</a> for our complete code of conduct and policies.</p>
   <hr>
   <p>Have a question? <a href="../contact.html">Contact us</a> anytime.</p>
   <hr>
