--- a/about/contact.html
+++ b/about/contact.html
@@ -68,7 +68,8 @@
             <span class="acc">About PPC</span>
           </button>
           <div class="content_list left" id="thisList_3">
-           <p class="sub-menu">  
+           <p class="sub-menu">
+            <a href="../about/coc.html">Code of Conduct</a>
             <a href="../about.html">Our Values and Staff</a>
             <a href="../about/contact.html" class="active">Contact Us</a>
            </p>
