--- a/vegas.html
+++ b/vegas.html
@@ -66,7 +66,8 @@
             <span class="acc">About PPC</span>
           </button>
           <div class="content_list left" id="thisList_3">
-           <p class="sub-menu">  
+           <p class="sub-menu">
+            <a href="./about/coc.html">Code of Conduct</a>
             <a href="./about.html">Our Values and Staff</a>
             <a href="./about/contact.html">Contact Us</a>
            </p>
