Remove wrong active styling on coc

--- a/about/coc.html
+++ b/about/coc.html
@@ -71,7 +71,7 @@
            <p class="sub-menu">
             <a href="../about/coc.html" class="active">Code of Conduct</a>
             <a href="../about.html">Our Values and Staff</a>
-            <a href="../about/contact.html" class="active">Contact Us</a>
+            <a href="../about/contact.html">Contact Us</a>
            </p>
           </div>
       </li>
