--- a/virtual.html
+++ b/virtual.html
@@ -72,9 +72,9 @@
           </button>
           <div class="content_list left" id="thisList_3">
            <p class="sub-menu">
-            <a href="./about/coc.html">Code of Conduct</a>
-            <a href="./about.html">Our Values and Staff</a>
-            <a href="./about/contact.html">Contact Us</a>
+            <a href="./about/coc.html">Code of Conduct</a></br>
+            <a href="./about.html">Our Values and Staff</a></br>
+            <a href="./about/contact.html">Contact Us</a></br>
            </p>
           </div>
       </li>
