--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html><head><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6ec6ff">
+<link rel="manifest" href="./site.webmanifest">
+<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#6ec6ff">
 <meta name="msapplication-TileColor" content="#bde5ff">
 <meta name="theme-color" content="#ffffff">
   <title>Pretty Princess Club, LLC</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -148,7 +148,8 @@
 <p><img src="./images/staff/conner.jpg" class="img-fluid" alt="Conner in a youthful setting with a brand designer"></p>
 </div>
 <div class="col-md-6">
-<p><a href="https://instagram.com/conconbee">Conner</a> is our Fashion Show Director! In her own words: I'm from North Carolina and have been volunteering for conventions for over a decade now! I've been wearing lolita on-and-off for six years but I'm also interested in larme and himekaji. At the risk of sounding like a stereotypical lolita, I also love tea and run a blog called CLTea. When I'm not drinking tea or getting dolled up, I love thrift shopping, video games and snuggling up with my beautiful girlfriend and cat. </p>
+<p><a href="https://instagram.com/conconbee">Conner</a> is our Fashion Show Director! In her own words:</p> 
+<p>I'm from North Carolina and have been volunteering for conventions for over a decade now! I've been wearing lolita on-and-off for six years but I'm also interested in larme and himekaji. At the risk of sounding like a stereotypical lolita, I also love tea and run a blog called CLTea. When I'm not drinking tea or getting dolled up, I love thrift shopping, video games and snuggling up with my beautiful girlfriend and cat. </p>
 </div>
 </div>
 <div class="row">
@@ -156,8 +157,26 @@
 <p><img src="./images/staff/allie.jpg" class="img-fluid" alt="Allie hanging upside-down from aerial silks"></p>
 </div>
 <div class="col-md-6">
-<p><a href="https://instagram.com/figurativelyallie">Allie</a> is our head of Vending at Royal Vegas Retreat! In her own words: I'm Allie! I am on the vendor relations team for Royal Vegas Retreat. I am based in Charlotte, North Carolina. Back home on the east coast I am also the convention chair for Queen City Anime Convention. I am passionate about event planning, community service, and circus arts!</p>
+<p><a href="https://instagram.com/figurativelyallie">Allie</a> is our head of Vending at Royal Vegas Retreat! In her own words:</p> 
+<p>I'm Allie! I am on the vendor relations team for Royal Vegas Retreat. I am based in Charlotte, North Carolina. Back home on the east coast I am also the convention chair for Queen City Anime Convention. I am passionate about event planning, community service, and circus arts!</p>
 </div>
+</div>
+<div class="row">
+  <div class="col-md-6">
+    <p><img src="./images/staff/ruthie.jpg" class="img-fluid" alt="Ruthie looking classic next to a blue wall, with added detail shots"></p>
+  </div>
+  <div class="col-md-6">
+    <p><a href="https://instagram.com/the_bard_in_bows">Ruthie</a> runs our swap meet and other content surprises at Royal Vegas Retreat! In their own words:</p>
+    <p>Hailing from LA, screenwriter, queer author, and actor Ruthie is a lolita that wears many, many bonnets. Their YouTube, <a href="https://www.youtube.com/channel/UC4N5MCxUmwV-yLHsAjuo9MQ">the_bard_in_bows</a>, focuses on plus size inclusiveness and comedy. She also is an admin for the small comm, the BGP Collective, which is still in its baby years. When she has free time (if any), Ruthie enjoys Animal Crossing, horror movies, and dressing like a sentient love seat at your grandmother's house.</p>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-6">
+    <p><img src="./images/staff/ryguy.jpg" class="img-fluid" alt="Ryan looking dandy at Paradiso"></p>
+  </div>
+  <div class="col-md-6">
+    <p><a href="https://www.instagram.com/ska_skank_redemption/">Ryan</a> is Nif's loving husband, and our transportation, logistics, and advanced arts and crafts coordinator. He may have taken your photo at one of our small events or at a convention. When he's not catering to his wife's extravagant whims, he loves playing pinball, gold panning, playing guitar and recording music, skateboarding, and restoring his vintage truck.</p>
+  </div>
 </div>
 <p>Kjrsten Kay drew our logos and design elements.</p>
 <p><a href="http://moniquelopez.net">Monique</a> is the genius who built our gorgeous website.</p>
