Update volunteers verbiage

--- a/event/volunteers.html
+++ b/event/volunteers.html
@@ -99,14 +99,14 @@
   <hr>
   <p>We need your help to make this event as fabulous as possible!</p>
   <p>Sign up to volunteer at Royal Vegas Retreat 2021 now: <a href="https://forms.gle/eeqKQQVkdQtdBKLs7">https://forms.gle/eeqKQQVkdQtdBKLs7</a></p>
-  <p>We will accept volunteer applications on a rolling basis, so sign up early, and tell your friends!</p>
+  <p>We have yet to respond to new volunteer signups since late 2020. We still want you at our event, and please do sign up and tell your friends! In order to effectively manage expectations, we are waiting to respond until we know more information about how our 2021 event will be affected by COVID-19.</p>
   <p>Volunteers can sign up to assist in one of many areas, including:
     <ul>
       <li>Registration</li>
       <li>Fashion show coordination (separate from modeling - we will release model applications in late 2021)</li>
       <li>Remote vending</li>
       <li>VIP guest experience</li>
-      <li>Advertising and outreach in your area</li>
+      <li>Swap meet</li>
       <li>...and more!</li>
     </ul>
   <p>We are thrilled to offer our volunteers free general admission tickets in exchange for their work. Volunteers will be responsible for their own travel and accommodations, and must complete at least 8 hours of work to qualify.</p>
