Add Paradise Rose to vendors, add KaetShop blurb

--- a/event/vendors.html
+++ b/event/vendors.html
@@ -115,7 +115,8 @@
   <p>GHOST GiRL GOODS is a clothing brand, fusing cool hip-hop looks and cute pop style into one. Our goals are to remove labels and embrace differences, encouraging confidence in all hearts! GHOST GiRL uses her love of music, dance, and Japanese street fashion as inspiration for each piece. She has worked with Sebastian Masuda, creator of 6%DOKIDOKI, on the NEW GENERATION KAWAII Tour held in Toronto, August of 2019 and most recently represented Canada at BuriDeco/World Lolita 2020 in Japan, hosted by Triple*Fortune. GHOST GiRL looks forward to meeting you at Royal Vegas Retreat! BE STRANGE. FEAR THE NORM.</p>
   <h2><a href="https://www.etsy.com/shop/HoliLoliEGL">Holi Loli</a></h2>
   <p>I’m a designer/maker that fell in love with Lolita in 2004- the lovely shape of classic pieces really spoke to me. I started creating soon after, and offer underskirts and accessories on my Etsy!  Though my main influences are classic and gothic, lot of my inspiration comes from Indian fashion. The name, Holi Loli, is a reference to the festival of colours, and this is reflected in my designs. I’m planning to release a print soon featuring a combination of Indian and Gothic. I’ve already started on it and am hoping to have it ready for the event! See you there!</p>
-  <h2><a href="https://kaetshop.bigcartel.com/">Kaet</a></h2>
+  <h2><a href="https://kaetshop.bigcartel.com/">KaetShop</a></h2>
+  <p>KaetShop is a celebration of retrofuturism and kawaii aesthetics.  They are proud to offer cute accessories including Made-to-Order customizable chokers and necklaces to perfectly round out your coords!</p>
   <h2><a href="https://kanekoshop.com/">Kaneko (remote)</a></h2>
   <p>Independent clothing and accessories brand based in Moscow, Russia. Founded in 2017 by Mikhail and Elizaveta Kaneko, the brand provides a big range of items including clothing, headwear and accessories in their unique aesthetic and with great attention to every detail. We love to make historical inspired things with dark and avant-garde twist. Despite being a small business, we want to make our items accessible for people of various sizes and genders.</p>
   <h2><a href="https://www.keicollective.com">Kei Collective</a></h2>
@@ -131,6 +132,8 @@
   <h2><a href="https://oddmonster.co/">Odd Monster</a></h2>
   <p>25% of the profits from the event will be donated to the Equal Justice Initiative</p>
   <p>Odd Monster is inspired largely by 80's/90's pop culture, Japanese street fashion, as well as a dash of trashy horror and occult. Odd Monster is a slow fashion company: each piece is sewn, printed and/or embellished by hand by the designer herself, while material is sourced through local companies whenever possible. The goal is to create something a little bit cute, a little bit nerdy, and a little bit odd for all the other fashionable weirdos out there.</p>
+  <h2><a href="https://www.etsy.com/shop/ParadiseRose">Paradise Rose Shop</a></h2>
+  <p>The idea behind Paradise Rose is to provide those who love Japanese fashion with handmade, affordable jewelry and accessories that compliment your wardrobe and complete the outfit. Jewelry can be an excellent way to make a coordinate unique and your own. Pieces created here are done by hand, resulting in one-of-a-kind pieces that belong to you alone.</p>
   <h2><a href="https://prettysour.com/">Pretty Sour</a></h2>
   <p>Pretty Sour is a size inclusive ethical US based indie clothing brand heavily inspired by J-fashion. We sell handmade clothing and accessories ranging from size XS - 5X in primarily pastel and vibrant colors with kitchsy cute illustrations and nostalgic prints.</p>
   <h2><a href="https://www.puvithel.com/">Puvithel</a></h2>
