--- a/event/vendors.html
+++ b/event/vendors.html
@@ -146,14 +146,19 @@
   <p>そんな世界観をコンセプトにしたゴシック＆ロリータブランドです</p>
   <p>更に、和テイストを取り入れたロリータスタイル『和ロリ』も加わりました。</p>
   <h2><a href="https://www.etsy.com/shop/starsweets/">Star Sweets</a></h2>
+  <p>Star Sweets is a handmade j-fashion accessories and artist shop!</p>
   <h2>Sugar and Vice</h2>
-  <h2>Sugar Clay Cafe</h2>
+  <p>Coming soon!</p>
+  <h2><a href="https://www.sugarmintcastle.com/">Sugar Clay Cafe</a></h2>
+  <p>Sugar Clay Cafe is the home of the Magical gift! You’ll find handmade items that sparkle and shine or cute sweet themes for that perfect accent to your accord, bringing that finishing touch. Since 2004, creating gifts and wearables that bring joy has been our specialty- that’s why we decorate so pink! Please be welcomed as you’re the guest of honor at our tea party! <3</p>
   <h2><a href="https://www.sugarstarcafe.com">Sugarstar Cafe</a></h2>
   <p>Sugarstar Cafe is inspired by toys and everything sweet! It's filled with delicious treats and other colorful accessories to match any coordinate or casual wear~  \ʕ•ᴥ•ʔ/</p>
   <h2><a href="https://www.etsy.com/people/SweetPastelPeach">Sweet Pastel Peach</a></h2>
+  <p>Coming soon!</p>
   <h2><a href="https://theblackribbon.com/">The Black Ribbon</a></h2>
   <p>The Black Ribbon originally started in Atlanta, GA under the name Miscy as an esty shop all hand made by our designer, Halley. Around 2011 we changed our name and decided to move towards making more pieces in a factory setting. Our brand is currently produced in the San Francisco Bay Area, utilizing local factories as well as smaller productions made entirely in our own studio. We produce small batch runs of clothing inspired by some of our favorite eras in fashion . The Black Ribbon strives for quality and sticks to our values of no sweatshop labor, good quality textiles, and having our line as accessible as possible to all people. We strongly support diversity, a livable minimum wage, and making clothes as sustainable as we can. We hope you like knowing your clothes were made by people who care from start to finish.</p>
   <h2><a href="https://www.thedecorafactory.com">The Decora Factory (remote)</a></h2>
+  <p>The Decora Factory is a Harajuku fashion and accessories brand based in Sydney, Australia. We design and make many of our kawaii clothes and accessories, and are plus-size inclusive. We also make accessories suitable for sweet and classic lolita, as well as catering for pastel Jfashion trends.</p>
   <h2><a href="http://tulutulu.xyz/">Tulu Tulu (remote)</a></h2>
   <p>TuluTulu Lolita is an indie lolita shop based in Taiwan.</p>
   <p>Have you ever met a fairy who can help you spread the gold dust of your dreams? The fairy godmother who helped Cinderella to become a beautiful princess, has constantly taught the little fairy that they must show the all the girls across the world the magic of owning their beauty. The little fairy opened a shop - "Tulu Tulu Lolita", she wanted to send a beautiful blessing to every female in the world who has the heart of a lady!</p>
