Update blog to link to Buttondown

--- a/about/coc.html
+++ b/about/coc.html
@@ -75,7 +75,7 @@
            </p>
           </div>
       </li>
-      <li>   <a href="https://prettyprincessclub.substack.com/" >Blog</a></li>
+      <li>   <a href="https://buttondown.email/prettyprincessclub" >Blog</a></li>
       <li>   <a href="https://shop.prettyprincess.club" >Shop</a></li>
     </ul>
     </nav>
