--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -73,7 +73,7 @@
            </p>
           </div>
       </li>
-            <li>   <a href="https://prettyprincessclub.substack.com/" >Blog</a></li>
+            <li>   <a href="https://buttondown.email/prettyprincessclub" >Blog</a></li>
             <li>   <a href="https://shop.prettyprincess.club" >Shop</a></li>
 
           </ul>
@@ -185,7 +185,7 @@
 </div>
 </div>
   <hr>
-  <p>We are working with the brightest talent, and we're truly excited about all of our special guests. Watch our <a href="https://www.facebook.com/ppcllcrvr">Facebook page</a> and sign up for our <a href="https://prettyprincessclub.substack.com/">Substack newsletter</a> for the latest announcements.</p>
+  <p>We are working with the brightest talent, and we're truly excited about all of our special guests. Watch our <a href="https://www.facebook.com/ppcllcrvr">Facebook page</a> and sign up for our <a href="https://buttondown.email/prettyprincessclub">newsletter</a> for the latest announcements.</p>
   <hr>
 
 </div>
