--- a/virtual/schedule.html
+++ b/virtual/schedule.html
@@ -79,7 +79,7 @@
            </p>
           </div>
       </li>
-            <li>   <a href="https://prettyprincessclub.substack.com/" >Blog</a></li>
+            <li>   <a href="https://buttondown.email/prettyprincessclub" >Blog</a></li>
             <li>   <a href="https://shop.prettyprincess.club" >Shop</a></li>
           </ul>
           </nav>
@@ -112,7 +112,7 @@
 <h6 class="section-header">6:00 PM ET / 3:00 PM PT: Opening Ceremony + Lolita Fashion Pub Trivia</h6>
 <p>MC: <a href="https://www.ghostgirlgoods.com/">Alexia</a> </p>
 <p>Get together in teams of 6 for Lolita Fashion Pub Trivia. Test your knowledge of the fashion, our favorite inspirations, and more over 6 eclectic rounds of 8 questions each. Prizes for the 1st place team. Free Agents welcome! <a href="./trivia.html">Learn more and sign up.</a>
-<h6 class="section-header">8:15 PM ET / 5:15 PM PT: DIY with PPC: <a href="https://prettyprincessclub.substack.com/p/make-the-rvo-signature-cocktail">Vegas Royal-Tea Cocktail</a> Mix-Along</h6>
+<h6 class="section-header">8:15 PM ET / 5:15 PM PT: DIY with PPC: <a href="https://buttondown.email/prettyprincessclubp/make-the-rvo-signature-cocktail">Vegas Royal-Tea Cocktail</a> Mix-Along</h6>
 <p>Hosted by Nif</p>
 <p>Looking for a little vacation in a glass? Grab a pouch of our <a href="https://shop.prettyprincess.club/product/vegas-royal-tea/8">signature Vegas Royal-Tea</a> from our <a href="https://shop.prettyprincess.club/">merch store</a> and get ready for a DIY cocktail mix-along. Check our <a href="https://prettyprincessclub.substack.com/p/make-the-rvo-signature-cocktail">blog post</a> for all the ingredients and steps to do in advance, and get ready to feel like Royalty.</p>
 <h6 class="section-header">9:00 PM ET / 6:00 PM PT: Turn up with DJ JIMNICRICKET</h6>
