--- a/vegas.html
+++ b/vegas.html
@@ -119,6 +119,10 @@
 <p>As we are postponing our event, ticket sales and room block bookings are currently closed. Stay tuned for updates in 2021!</p>
 <h2 class="section-header">What about COVID-19?</h2>
 <p>As a result of COVID-19, we are postponing our event until 2021.</p>
+<h2 class="section-header">How do I learn about updates?</h2>
+<p><a href="https://buttondown.email/prettyprincessclub">Subscribe to our blog+email list</a> to get the latest information about Royal Vegas Retreat 2021 before it hits social media!</p>
+<h2 class="section-header">How do I support Pretty Princess Club and Royal Vegas Retreat?</h2>
+<p>Buy some merch or send us a donation at our <a href="https://shop.prettyprincess.club">shop</a>, and become a paid subscriber to our <a href="https://buttondown.email/prettyprincessclub">blog+email list!</a></p>
 <h2 class="section-header">I have a question!</h2>
 <p>Please see our <a href="./event/event-faq.html">event FAQ page</a> for more information about our event. If your question isn't answered there, see our <a href="./contact.html">Contact Us page</a>.</p>
 <h2 class="section-header">Our Sponsors</h2>
