Comment out special guests and vendors to add back later

--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -93,6 +93,8 @@
 </div>
 
 <div class="row content">
+  <p>Thank you for your patience as we begin our planning for Royal Vegas Retreat 2021. COVID-19 still presents uncertainty for us and our special guests, and we will add our special guests back to this page as the situation becomes clearer.</p>
+  <!--
   <h2>Aito (Royal Princess Alice and Bio-Politics)</h2>
   <div class="row">
     <div class="col-md-4">
@@ -111,12 +113,12 @@
   <p>Shop the brands online at <a href="https://royalprincessalice.net">https://royalprincessalice.net</a> and <a href="https://biopolitics.thebase.in">https://biopolitics.thebase.in</a></p>
 </div>
 </div>
-  <!--<h2>Lief</h2>
+  <h2>Lief</h2>
   <img src="../images/guests/lief06.jpg" class="img-fluid"/>
   <p>We're so excited to welcome Lief to Royal Vegas Retreat 2021. This Korean brand offers substyle-crossing original print dresses in multiple sizes. In our opinion, they have a little something for everyone! You'll be able to buy from them in our vendors' room as well as see their looks on the runway in the fashion show.</p>
   <p>In their own words:</p>
   <p><i>Lief, which means both cute and lovely in Dutch, has a touch of Gothic and a pinch of sweetness, allowing them to create lovely, classical styles that can be worn in both casual and elegant situations.</i></p>
-  <p>You can find their products on their website (<a href="www.lief.co.kr">www.lief.co.kr</a>). You can also follow them on Facebook (<a href="https://www.facebook.com/lief.co.kr/">https://www.facebook.com/lief.co.kr/</a>), Twitter (<a href="https://twitter.com/LIEFOFFICIAL">https://twitter.com/LIEFOFFICIAL</a>), Instagram (<a href="https://instagram.com/lief_official/">https://instagram.com/lief_official/</a>), Tumblr (<a href="http://lief-lolita.tumblr.com/">http://lief-lolita.tumblr.com/</a>), or their Japanese official blog (<a href="http://ameblo.jp/lief-jp/">http://ameblo.jp/lief-jp/</a>).</p>-->
+  <p>You can find their products on their website (<a href="www.lief.co.kr">www.lief.co.kr</a>). You can also follow them on Facebook (<a href="https://www.facebook.com/lief.co.kr/">https://www.facebook.com/lief.co.kr/</a>), Twitter (<a href="https://twitter.com/LIEFOFFICIAL">https://twitter.com/LIEFOFFICIAL</a>), Instagram (<a href="https://instagram.com/lief_official/">https://instagram.com/lief_official/</a>), Tumblr (<a href="http://lief-lolita.tumblr.com/">http://lief-lolita.tumblr.com/</a>), or their Japanese official blog (<a href="http://ameblo.jp/lief-jp/">http://ameblo.jp/lief-jp/</a>).</p>
   <hr>
   <h2>Lovely Lor and Holly Flynn</h2>
   <div class="row">
@@ -185,7 +187,7 @@
 </div>
 </div>
   <hr>
-  <p>We are working with the brightest talent, and we're truly excited about all of our special guests. Watch our <a href="https://www.facebook.com/ppcllcrvr">Facebook page</a> and sign up for our <a href="https://buttondown.email/prettyprincessclub">newsletter</a> for the latest announcements.</p>
+  <p>We are working with the brightest talent, and we're truly excited about all of our special guests. Watch our <a href="https://www.facebook.com/ppcllcrvr">Facebook page</a> and sign up for our <a href="https://buttondown.email/prettyprincessclub">newsletter</a> for the latest announcements.</p>-->
   <hr>
 
 </div>
