--- a/event/vendors.html
+++ b/event/vendors.html
@@ -93,8 +93,9 @@
 </div>
 
 <div class="row content">
+  <p>Thank you for your patience as we begin our planning for Royal Vegas Retreat 2021. COVID-19 still presents uncertainty for us and our vendors, and we will add our vendors back to this page as the situation becomes clearer.</p>
 
-  <h1 class="sec01">
+  <!--<h1 class="sec01">
   <h1>RVR Vendors</h1>
   <hr>
   <p>We are so excited to have all of our wonderful vendors at our 2021 event! Learn more about them below:</p> 
@@ -127,8 +128,8 @@
   <p>Hey, all! We at Kuroshiro Kawaii want to ensure that the entire community in the Houston, TX area has access to quality Japanese fashion. We pride ourselves on having real connections to brand owners and designers, including Japanese, indie, and self-care brands. Kuroshiro Kawaii—it’s a name with multiple facets. When we were deciding on a name, we wanted one that would reflect the duality of the fashions we offer while at the same time being recognizable and inviting to the typical American in the area. The “kuro” in our name stands for punk, gothic, and visual fashion; while “shiro” stands for elegant, princely, and sweet lolita and ouji fashions. It also reflects another duality that is important to the attitude of our shop: good and evil, angel and devil, order and chaos. The words “kuro” and “shiro,” and their associated meaning in kanji, really pin down what we wanted for the look and feel of our shop and the brands we want to carry. </p>
   <h2><a href="https://www.etsy.com/shop/Lavendorium">Lavendorium</a></h2>
   <p>Lavendorium is an accessories brand that aims to bring a little extra decadence to any outfit! Every piece is designed and handmade by brand owner Mia with care and attention to detail. Every single one is created to become a treasured part of someone's beloved wardrobe! The items you'll find here are sometimes spooky, sometimes sweet, but always sparkly! </p>
-<!--   <h2><a href="lief.co.kr">Lief</a></h2>
-  <p>Lief, which means both cute and lovely in Dutch, has a touch of Gothic and a pinch of sweetness, allowing us to create lovely, classical styles that can be worn in both casual and elegant situations.</p> -->
+  <h2><a href="lief.co.kr">Lief</a></h2>
+  <p>Lief, which means both cute and lovely in Dutch, has a touch of Gothic and a pinch of sweetness, allowing us to create lovely, classical styles that can be worn in both casual and elegant situations.</p>
   <h2><a href="https://oddmonster.co/">Odd Monster</a></h2>
   <p>25% of the profits from the event will be donated to the Equal Justice Initiative</p>
   <p>Odd Monster is inspired largely by 80's/90's pop culture, Japanese street fashion, as well as a dash of trashy horror and occult. Odd Monster is a slow fashion company: each piece is sewn, printed and/or embellished by hand by the designer herself, while material is sourced through local companies whenever possible. The goal is to create something a little bit cute, a little bit nerdy, and a little bit odd for all the other fashionable weirdos out there.</p>
@@ -163,7 +164,7 @@
   <p>TuluTulu Lolita is an indie lolita shop based in Taiwan.</p>
   <p>Have you ever met a fairy who can help you spread the gold dust of your dreams? The fairy godmother who helped Cinderella to become a beautiful princess, has constantly taught the little fairy that they must show the all the girls across the world the magic of owning their beauty. The little fairy opened a shop - "Tulu Tulu Lolita", she wanted to send a beautiful blessing to every female in the world who has the heart of a lady!</p>
   <h2><a href="https://twootietarte.com">Twootie Tarte</a></h2>
-  <p>Saving the world by defeating the con funk one bath at a time. Come stop by for some amazing smells and products that redefine self care. Based out of Austin, Texas! We're encouraging fans to keep their hands clean, smell good and practice good hygiene.</p>
+  <p>Saving the world by defeating the con funk one bath at a time. Come stop by for some amazing smells and products that redefine self care. Based out of Austin, Texas! We're encouraging fans to keep their hands clean, smell good and practice good hygiene.</p>-->
   <hr>
 
 </div>
